# projet_prog_S1

./: README.md  traffic_light.cpp
Projet/traffic_light/: CMakeLists.txt  traffic_light.cpp
